--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@
   display: flex;
   justify-content: center;
   margin: auto;
-  margin-left: 29%;
+  margin-left: 32%;
   width: 50%;
   padding: 10px;
   margin-top: -35px;
@@ -107,7 +107,7 @@
 
 .inputbtn .images img {
   display: block;
-  margin-left: 130%;
+  margin-left: 115%;
   margin-right: auto;
   width: 160%;
 }
@@ -116,7 +116,7 @@
   width: 430pt;
   height: 20pt;
   color: rgb(51, 182, 82);
-  font-size: 15pt;
+  font-size: 16pt;
   margin-left: 45%;
   margin-top: 8%;
   letter-spacing: -0.01pt;
@@ -182,7 +182,7 @@
   color: rgb(0, 105, 70);
   text-decoration: none;
   position: absolute;
-  left: 44.5%;
+  left: 45.5%;
 }
 
 .Main .achorTag {
@@ -228,7 +228,7 @@ input::placeholder {
   color: rgb(0, 105, 70);
 }
 
-/*********************************************** Media Query for login page *****************************/
+/*********** Media Query for login page Media Query for low resolution  Tablets, Ipads  *****************************/
 
 @media (min-width: 481px) and (max-width: 767px) {
   .Main {
@@ -243,92 +243,113 @@ input::placeholder {
   }
 
   .inputbtn .images img {
-    width: 50rem;
-    margin-left: 85rem;
+    width: 60rem;
+    margin-left: 100rem;
   }
   .inputbtn .images h3 {
-    font-size: 55px;
-    width: 78rem;
-    margin-left: 71rem;
+    font-size: 78px;
+    width: 100rem;
+    margin-left: 80rem;
   }
 
   .inputbtn input {
-    width: 70rem;
-    margin-top: 18rem;
-    height: 25vh;
-    margin-left: 94rem;
+    width: 100rem;
+    margin-top: 20rem;
+    height: 32vh;
+    border: 2px solid rgb(0, 105, 70);
+    margin-left: 100rem;
   }
 
   .inputbtn input[type="email"] {
-    font-size: 70px;
+    font-size: 90px;
   }
 
   .inputbtn input[type="password"] {
-    font-size: 70px;
+    font-size: 90px;
   }
 
   .inputbtn input::placeholder {
-    font-size: 65px;
+    font-size: 95px;
   }
 
   .inputbtn .submitbtn {
-    margin-right: 60rem;
+    margin-right: 89rem;
   }
 
   .inputbtn .submitbtn button {
-    width: 70rem;
-    height: 12rem;
+    width: 100rem;
+    height: 35vh;
     margin-top: 20px;
-    font-size: 95px;
+    font-size: 145px;
   }
 
   .Main .inputbtn .achorTag {
     position: relative;
-    left: 24%;
+    left: 18%;
   }
 
   .Main .inputbtn .achorTag a {
-    font-size: 60px;
-    width: 43rem;
+    font-size: 90px;
+    width: 50rem;
   }
 }
 
+/*************************************Media Query For Mobiles**************************/
+
 /* Media Query for Mobile Devices */
 @media (min-width: 320px) and (max-width: 480px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   .Main {
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-left: 10rem;
-    margin-top: 10rem;
+    margin-left: 45%;
+    /* width: 45rem; */
+    margin-top: 30rem;
   }
 
   .inputbtn .images img {
-    width: 18rem;
-    margin-left: 7rem;
+    width: 40rem;
+    margin-left: 5rem;
+  }
+
+  .inputbtn .images {
+    margin-top: 35rem;
   }
 
   .inputbtn input::placeholder {
-    font-size: 25px;
+    font-size: 70px;
   }
 
   .inputbtn input[type="email"] {
-    font-size: 25px;
+    font-size: 60px;
   }
 
   .inputbtn input[type="password"] {
-    font-size: 25px;
+    font-size: 60px;
+  }
+  .inputbtn2 {
+    margin-top: -10rem;
   }
 
   .inputbtn .images h3 {
-    margin-left: -1rem;
-    font-size: 20px;
+    margin-left: -6rem;
+    font-size: 50px;
+    width: 65rem;
   }
-
+  .inputbtn {
+    width: 130%;
+  }
   .Main .inputbtn input {
-    margin-left: 22.5rem;
-    width: 25rem;
-    margin-top: 1rem;
+    margin-left: 14.5rem;
+    width: 60rem;
+    height: 22vh;
+    margin-top: 12rem;
+    border: 1px solid rgb(0, 105, 70);
   }
 
   .Main .inputbtn .submitbtn {
@@ -336,18 +357,24 @@ input::placeholder {
   }
 
   .Main .inputbtn .submitbtn button {
-    width: 25rem;
+    margin-left: 14.5rem;
+    width: 60rem;
+    height: 25vh;
+    font-size: 100px;
   }
 
   .inputbtn .achorTag {
     position: relative;
-    left: 16%;
+    left: 44%;
   }
   .Main .inputbtn .achorTag a {
-    font-size: 20px;
-    width: 11rem;
+    font-size: 60px;
+    width: 40rem;
   }
 }
+
+/*********************************Media Query For Ipads***********************
+
 
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -377,21 +404,21 @@ input::placeholder {
 
   .inputbtn .submitbtn button {
     margin-left: 32rem;
-    height: 11vh;
-    margin-top: 5rem;
+    height: 15vh;
+    font-size: 50px;
     width: 40rem;
     margin-top: 1rem;
   }
   .inputbtn input::placeholder {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   .inputbtn input[type="email"] {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   .inputbtn input[type="password"] {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   .inputbtn .achorTag {
@@ -406,7 +433,7 @@ input::placeholder {
 
 /******************************** Media Query For Ipad Potraits ********************/
 
-@media (min-width: 1025px) and (max-width: 1180px) {
+/* @media (min-width: 1025px) and (max-width: 1180px) {
   .Main {
     align-items: center;
     justify-content: center;
@@ -453,7 +480,7 @@ input::placeholder {
     font-size: 25px;
     margin-left: -4rem;
   }
-}
+} */
 
 /* Media Query for Laptops and Desktops */
 /* @media (min-width: 1025px) and (max-width: 1280px) {
@@ -468,3 +495,63 @@ rge screens */
     background-color: white;
   }
 } */
+/****************************************************************************/
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .inputbtn .images img {
+    margin-left: 12rem;
+  }
+  .images {
+    margin-left: 50rem;
+  }
+  .inputbtn .images h3 {
+    font-size: 35px;
+    width: 50rem;
+    margin-left: 35px;
+  }
+
+  .inputbtn {
+    margin-top: 10%;
+    margin-right: 170%;
+  }
+  .inputbtn input {
+    width: 45rem;
+    margin-top: 5rem;
+    height: 10vh;
+    border: 1px solid rgb(0, 105, 70);
+    margin-left: 55rem;
+  }
+  .Main .submitbtn button {
+    width: 45rem;
+    margin-top: 1rem;
+    height: 12vh;
+    margin-left: 55rem;
+    font-size: 60px;
+  }
+  .inputbtn input[type="email"] {
+    font-size: 40px;
+  }
+
+  .inputbtn input[type="password"] {
+    font-size: 40px;
+  }
+
+  .inputbtn input::placeholder {
+    font-size: 40px;
+  }
+  .Main .achorTag a {
+    font-size: 30px;
+    width: 40rem;
+  }
+  .Main .achorTag {
+    position: relative;
+    margin-left: 45rem;
+  }
+}
+
+/****************************************Media Query for large screen ***********/
+
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+}
