--- a/src/Style.css
+++ b/src/Style.css
@@ -47,7 +47,7 @@
   height: 37pt;
   text-align: center;
   margin-top: 1%;
-  margin-right: 40%;
+  margin-right: 46%;
 }
 
 .Page_two_LogOut {
@@ -94,9 +94,7 @@
 
 .heading span {
   font-size: 14pt;
-
-  /* margin-left: 123px; */
-  margin-left: 228px;
+  margin-left: 230px;
 }
 
 .heading {
@@ -120,12 +118,12 @@ margin-left: 120px; */
   color: rgb(0, 0, 0);
   border-bottom: 1px solid #00a53e;
   padding-bottom: 5px;
-  width: 78rem;
+  width: 86rem;
   margin: 20px 10px;
 }
 
 .Page_two_search_Chooes_box .Button {
-  margin-left: 86%;
+  margin-left: 89%;
   margin-top: -121px;
 }
 
@@ -135,8 +133,17 @@ margin-left: 120px; */
 
 .choesBTN {
   accent-color: #00a53e;
-  width: 20px;
-  height: 20px;
+}
+
+.page_two_chooes .kt input[type="radio"] {
+  width: 30px;
+  margin-top: -10px;
+  cursor: pointer;
+}
+.page_two_chooes .chassis input[type="radio"] {
+  width: 30px;
+  margin-top: -10px;
+  cursor: pointer;
 }
 
 .kt {
@@ -172,16 +179,8 @@ margin-left: 120px; */
   font-size: 21px;
   font-weight: bold;
   height: 55px;
-  margin-right: -30%;
+  margin-right: 0%;
   padding-top: 14px;
-}
-
-.page_two_or span {
-  border-right: 2px dashed #00a53e;
-  /* font-size: 100px; */
-  height: 10vh;
-  margin-top: 3px;
-  margin-left: 12px;
 }
 
 .page_two_or {
@@ -229,19 +228,19 @@ margin-left: 120px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 78rem;
+  width: 97%;
   margin: -25px auto;
   padding-bottom: 10px;
   border-bottom: 2px dashed #00a53e;
 }
 
 .vl {
-  border-right: 1px dashed rgb(0, 0, 0);
+  border-right: 2px dashed rgb(0, 0, 0);
   height: 40pt;
   width: 1px;
   position: absolute;
-  left: 58%;
-  margin-left: -34rem;
+  left: 15%;
+  /* margin-left: -39rem; */
   /* margin-left: -540px; */
   top: 15px;
 }
@@ -302,10 +301,14 @@ tr th {
   font-size: 17px;
 }
 
+.Service {
+  text-align: left;
+}
+
 tr td {
   background-color: rgb(237, 242, 242);
   padding: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 15px;
 }
 
@@ -450,6 +453,35 @@ tr td {
   margin-left: 0%;
 }
 
+.Table_Customer thead th {
+  width: 100px;
+  border-bottom: solid 1px #ddd;
+  font-weight: bold;
+}
+.Table_Customer tbody:nth-child(odd) {
+  background: #f5f5f5;
+  border: solid 1px #ddd;
+}
+.Table_Customer tbody:nth-child(even) {
+  background: #e5e5e5;
+  border: solid 1px #ddd;
+}
+
+/* .Table_Customer .Failure_reasons {
+}
+.page_two_complaint_failure .Table_Customer thead tr th {
+  width: 100px;
+  border-bottom: solid 1px #ddd;
+  font-weight: bold;
+}
+.Table_Customer tbody:nth-child(even) {
+  background: #f5f5f5;
+  border: solid 1px #ddd;
+}
+.Table_Customer tbody:nth-child(even) {
+  background: #e5e5e5;
+  border: solid 1px #ddd;
+} */
 .page_two_complaint_failure_table {
   margin-top: -244px;
 }
@@ -610,8 +642,9 @@ tr td {
   font-weight: bold;
   /* text-align: center; */
   margin-left: 50px;
-  font-size: 21px;
+  font-size: 20pt;
   margin-bottom: 20px;
+  color: rgb(0, 0, 0);
 }
 
 .complist {
@@ -636,9 +669,9 @@ tr td {
 }
 
 .page_two_component_button .Save_Button {
-  margin-left: 30%;
+  margin-left: 36%;
   margin-top: 3%;
-  width: 301pt;
+  width: 200pt;
   height: 50pt;
   background-color: rgb(8, 136, 38);
   border-radius: 6pt;
@@ -646,8 +679,16 @@ tr td {
   border-right: rgb(8, 136, 38);
   border-bottom: rgb(8, 136, 38);
   color: rgb(255, 255, 255);
-  font-size: 23pt;
+  font-size: 20pt;
   letter-spacing: 0.89pt;
+}
+
+.page_two_component_button {
+  display: flex;
+  flex-direction: row;
+  height: 6.5rem;
+  width: 50rem;
+  margin-left: 5rem;
 }
 
 .page_two_component_button .Save_Button:hover {
@@ -1206,21 +1247,12 @@ input:focus {
   height: 5vh;
   border-radius: 6pt;
   margin-top: 4%;
-  margin-right: 15px;
+  margin-right: 5px;
   font-family: Roboto-Bold;
   background-repeat: no-repeat;
   background-position-x: 100%;
   background-position-y: 5px;
   border: none;
-
-  /* margin-top: 5pt; */
-  /* border-radius: 2px;
-
-    margin-right: 10rem;
-
-    padding: 1rem;
-
-    padding-right: 2rem; */
 }
 
 .drop_down_values {
@@ -1249,7 +1281,7 @@ input:focus {
 }
 
 .drop_down_values {
-  width: 345pt;
+  width: 350pt;
   margin-left: 26px;
   margin-bottom: 57px;
   margin-top: 8%;
@@ -1264,7 +1296,7 @@ input:focus {
   width: 65%;
   padding-top: 19px;
   margin-left: 10px;
-  font-size: 20px;
+  font-size: 19px;
 }
 
 /* .drop_down_values select{
@@ -1585,22 +1617,27 @@ margin-top: -20%;
 
   .Page_two_logoAndLogOut .vl {
     height: 16vh;
+    border-right: 3px dashed rgb(0, 0, 0);
+    position: sticky;
+    margin-top: 1%;
+    margin-right: 75rem;
   }
   .Page_two_logoAndLogOut h3 {
     clear: both;
+    margin-top: 0px;
     display: inline-block;
-    /* overflow: hidden; */
-    padding-left: 5rem;
+    margin-left: -73rem;
     white-space: nowrap;
-    font-size: 35px;
+    font-size: 40px;
   }
   .heading {
     margin-left: 5.5rem;
+    margin-top: -4%;
   }
 
   .heading span {
-    font-size: 35px;
-    padding-left: 4rem;
+    font-size: 40px;
+    padding-left: 20px;
   }
 
   .Page_two_LogOut {
@@ -1655,7 +1692,7 @@ margin-top: -20%;
   }
 
   .page_two_or p {
-    padding-top: 45px;
+    padding-top: 4px;
     font-size: 40px;
   }
 
@@ -1668,7 +1705,7 @@ margin-top: -20%;
     margin-left: 5rem;
   }
 
-  .chassis input[type="radio"] {
+  .page_two_chooes .chassis input[type="radio"] {
     border: 0px;
     width: 6rem;
     height: 4em;
@@ -1691,7 +1728,7 @@ margin-top: -20%;
     width: 22rem;
     border: 1px solid rgba(200, 200, 200, 0.5);
     height: 15vh;
-    font-size: 30px;
+    font-size: 40px;
   }
 
   .page_two_serchbar input::placeholder {
@@ -1702,7 +1739,7 @@ margin-top: -20%;
     height: 15vh;
     margin-right: -16rem;
     width: 20rem;
-    font-size: 40px;
+    font-size: 50px;
   }
 
   .page_two_middel_box {
@@ -1881,7 +1918,7 @@ margin-top: -20%;
   }
 
   .Fail_reason {
-    margin-top: -67rem;
+    margin-top: -59rem;
   }
 
   .Fail_reason .freason {
@@ -1944,6 +1981,7 @@ margin-top: -20%;
   .drop_down_values .Drop_select {
     font-size: 40px;
     height: 52px;
+    margin-top: 15px;
     padding-left: 3rem;
   }
 
@@ -2315,30 +2353,46 @@ margin-top: -20%;
 
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
-  .main_div {
-    width: 100rem;
+  * {
+    padding: 0;
+    margin: 0;
+    width: fit-content;
   }
-  .Page_two_logoAndLogOut img {
+  .main_div {
+    width: 120rem;
+    margin-top: 1rem;
+  }
+  /* .Page_two_logoAndLogOut img {
     width: 15rem;
     height: 5rem;
     margin-top: 2rem;
-  }
+  } */
   .vl {
     display: none;
   }
   .Page_two_logoAndLogOut h3 {
-    font-size: 30px;
+    margin-right: 694px;
+    font-size: 23px;
   }
+
+  .Page_two_logoAndLogOut {
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+  }
+
   .heading {
-    padding-left: 16rem;
-    padding-top: 2rem;
+    margin-top: -2.5rem;
   }
+
   .heading span {
-    font-size: 35px;
+    font-size: 27px;
   }
+
   .Page_two_LogOut {
-    margin-right: 6rem;
-    margin-top: 2rem;
+    position: absolute;
+    left: 73rem;
+    margin-top: 5.5rem;
   }
   .Page_two_LogOut i {
     margin-top: -15rem;
@@ -2357,8 +2411,8 @@ margin-top: -20%;
     height: 20vh;
   }
   .Page_two_search_Chooes_box .bottom {
-    font-size: 30pt;
     width: 104rem;
+    margin-top: 7rem;
     color: rgb(0, 0, 0);
     border-bottom: 3px solid #00a53e;
   }
@@ -2368,6 +2422,7 @@ margin-top: -20%;
     font-size: 33px;
     height: 5rem;
     margin-top: -12rem;
+    margin-left: 90rem;
   }
   .Page_two_search_Chooes_box input[type="radio"] {
     height: 20vh;
@@ -2375,10 +2430,20 @@ margin-top: -20%;
     margin-left: 2rem;
   }
   .page_two_middel_box {
-    height: 20vh;
-    width: 104rem;
+    /* display: flex; */
+    /* position: absolute; */
+    right: -5rem;
+    /* align-items: self-start; */
+    width: 105rem;
+    /* margin: -25px auto; */
+
+    border-bottom: 2px dashed #00a53e;
+    /* margin-top: 23rem; */
+    margin: 4px;
   }
   .page_two_chooes {
+    margin-bottom: 2rem;
+    display: flex;
   }
   .kt {
     width: 22rem;
@@ -2402,5 +2467,201 @@ margin-top: -20%;
   }
   .chassis h2 {
     font-size: 50px;
+  }
+  .hideshow {
+    margin-top: 5rem;
+  }
+
+  .drop_down_value {
+    position: absolute;
+    right: 66%;
+    margin-top: -2.5rem;
+  }
+
+  .page_two_table Table {
+    width: 103rem;
+  }
+
+  .page_two_table Table Th {
+    font-size: 27px;
+  }
+
+  .page_two_table Table Td {
+    font-size: 20px;
+  }
+
+  .page_two_table Table input {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .checktable {
+  }
+
+  .page_two_complaint_failure {
+    width: 121rem;
+  }
+
+  .page_two_complaint_failure h2 {
+    font-size: 35px;
+    padding-left: 1rem;
+  }
+
+  .page_two_complaint_failure .page_two_complaint_tab .Cust_Table {
+    height: 15vh;
+  }
+
+  .page_two_complaint_failure .page_two_complaint_tab .Cust_Table th {
+    font-size: 40px;
+  }
+
+  .page_two_complaint_failure .page_two_complaint_tab .Cust_Table i {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .page_two_complaint_failure .page_two_complaint_tab .Cust_Table td {
+    font-size: 35px;
+  }
+
+  .Cust_Table_tab {
+    height: 15vh;
+  }
+
+  .Cust_Table_tab th {
+    font-size: 40px;
+  }
+
+  .Cust_Table_tab i {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .Cust_Table_tab td {
+    font-size: 35px;
+  }
+
+  .main_black_div {
+    width: 123rem;
+  }
+
+  .page_two_complaint_list {
+    width: 100rem;
+    height: 73rem;
+  }
+
+  .complaints_container .arrow_img img {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .complaints_container .Spa_nn {
+    border-left: 5px dashed rgb(151, 151, 151);
+    height: 50rem;
+    margin-left: 49rem;
+  }
+
+  .complaints_container .Compla_int_container_heading {
+    font-size: 45px;
+  }
+
+  .complaints_container .complist input[type="radio"] {
+    width: 5rem;
+    height: 4rem;
+  }
+
+  .page_two_component_button .Save_Button {
+    width: 35rem;
+    margin-top: 10rem;
+    font-size: 50px;
+    height: 5rem;
+  }
+
+  .complaints_container .complist input {
+    margin-top: 11px;
+  }
+
+  .complaints_container .complist p {
+    font-size: 35px;
+    padding-top: 1rem;
+  }
+
+  .Fail_reason {
+    margin-top: -67rem;
+  }
+
+  .Fail_reason .freason {
+    font-size: 45px;
+  }
+
+  .Fail_reason .Engine_oil_Drain input[type="checkbox"] {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .Fail_reason .Engine_oil_hose input[type="checkbox"] {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .Fail_reason .Engine_cylinder_head input[type="checkbox"] {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .Fail_reason .Engine_oil_filter_leak input[type="checkbox"] {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .Fail_reason .Engine_oil_Drain p {
+    font-size: 35px;
+    padding-left: 72px;
+    margin-top: -3.5rem;
+  }
+  .Fail_reason .Engine_oil_hose p {
+    font-size: 35px;
+    padding-left: 72px;
+    margin-top: -3.5rem;
+  }
+
+  .Fail_reason .Engine_cylinder_head p {
+    font-size: 35px;
+    padding-left: 72px;
+    margin-top: -3.5rem;
+  }
+
+  .Fail_reason .Engine_oil_filter_leak p {
+    font-size: 35px;
+    padding-left: 72px;
+    margin-top: -3.5rem;
+  }
+
+  .drop_down_values {
+    width: 48rem;
+    height: 6rem;
+    margin-bottom: 5rem;
+  }
+
+  .drop_down_values b {
+    font-size: 35px;
+    padding-top: 1.5rem;
+  }
+
+  .drop_down_values .Drop_select {
+    font-size: 35px;
+    height: 52px;
+    padding-left: 3rem;
+  }
+
+  .drop_down_values .Drop_select option {
+  }
+
+  .job_card .job_cardbtn {
+    width: 28rem;
+    font-size: 39px;
+    margin-top: 44px;
+    margin-left: -20.1rem;
+    height: 7rem;
   }
 }
