--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,3 @@
-/* *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.images .image1{
-  height: 11vh;
-  display: block;
-  margin-left: 512px;
-  margin-right: auto;
-  margin-top: 130px;
-}
-
-.images h3{
-  color: rgb(43, 179, 43);
-  text-align: center;
-  margin-top: 24px;
-  font-size: 18px;
-  width: ;
-}
-
-
-.inputbtn{
-  margin-left: 7px;
-  margin-top: 25px;
-}
-
-.inputbtn .btn1{
-  margin-left: 438px;
-  height: 8vh;
-  width: 30%;
-  margin-top: 20px;
-  /* border-radius: 4px; */
-/* font-size: 18px;
-  box-sizing: border-box; */
-
-/* } */
-
-/* .inputbtn2 .btn2{
-  margin-left: 438px;
-  height: 8vh;
-  width: 30%;
-  margin-top: 8px;
-  /* border-radius: 4px; */
-/* font-size: 18px;
-  box-sizing: border-box;
-} */
-
-/* .sbbntn{
-  margin-left: 438px;
-  height: 11vh;
-
-  width: 30%;
-  margin-top: 12px;
-  border-radius: 4px;
-  font-size: 15px;
-  background-color: darkgreen;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  
-} */
-/* 
-.inputbtn .anchortg {
-  margin-left: 575px;
-  text-decoration: none;
-  color: darkgreen;
-  } */
-
-/* .sbbntn:hover{
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  } */
-
-/* .images{
-    margin-right: 23px;
-  }
-
-  input::placeholder {
-    font-weight: bold;
-    
-    color: black;
-    margin-left: 10rem !important;
-}  */
-
 /******************************************* <Login.js> **********************************************/
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@@ -156,7 +71,7 @@
 
 .inputbtn {
   margin-top: 10%;
-  margin-right: 150%;
+  margin-right: 180%;
 }
 
 .Main .submitbtn button {
@@ -189,6 +104,41 @@
   padding-top: 10px;
 }
 
+.register {
+  padding-top: 2rem;
+  position: relative;
+  left: 66%;
+}
+
+.Main .inputbtn p {
+  position: relative;
+  left: 40rem;
+  color: rgb(0, 105, 70);
+}
+
+.Register {
+  margin-top: -15px;
+}
+
+.Register .Register_btn {
+  width: 350pt;
+  height: 45pt;
+  margin-left: 90%;
+  margin-top: 0%;
+  border-radius: 6pt;
+  color: rgb(255, 255, 255);
+  background-color: rgb(8, 136, 38);
+  font-size: 18pt;
+  letter-spacing: 0.89pt;
+  overflow-x: 374pt;
+  overflow-y: 643pt;
+  border-color: rgb(8, 136, 38);
+  border-width: thin;
+}
+
+.Register .Register_btn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 /* 
 .images {
   margin-left: 100%;
