--- a/src/Style.css
+++ b/src/Style.css
@@ -123,7 +123,8 @@ margin-left: 120px; */
 }
 
 .Page_two_search_Chooes_box .Button {
-  margin-left: 89%;
+  left: 89%;
+  position: relative;
   margin-top: -121px;
 }
 
@@ -437,9 +438,39 @@ tr td {
 }
 
 .page_two_complaint_tab .tables .Table_Customer {
-  width: 99.9%;
+  width: 199.9%;
   margin: 0;
   padding: 0;
+}
+
+.Table_Customer thead tr th {
+  border-collapse: collapse;
+}
+
+.Minus_btn {
+  position: absolute;
+  left: 35.5em;
+  border: none;
+}
+
+.minus_btn img {
+  height: 1.5rem;
+  border: none;
+}
+
+.minus_btn {
+  position: absolute;
+  left: 67.6em;
+  border: none;
+}
+
+.Failure_data {
+  font-size: 20px;
+  width: 35rem;
+  clear: both;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .page_two_complaint_tab .tables Th {
@@ -453,18 +484,22 @@ tr td {
   margin-left: 0%;
 }
 
+.Table_Customer tbody .Cust_t0 {
+  border: 1px solid black;
+}
+
 .Table_Customer thead th {
   width: 100px;
-  border-bottom: solid 1px #ddd;
+  border-bottom: solid 1px rgb(237, 242, 242);
   font-weight: bold;
 }
 .Table_Customer tbody:nth-child(odd) {
-  background: #f5f5f5;
-  border: solid 1px #ddd;
+  background: rgb(237, 242, 242);
+  border: solid 1px rgb(237, 242, 242);
 }
 .Table_Customer tbody:nth-child(even) {
-  background: #e5e5e5;
-  border: solid 1px #ddd;
+  background: rgb(237, 242, 242);
+  border: solid 1px rgb(237, 242, 242);
 }
 
 /* .Table_Customer .Failure_reasons {
